<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <Button
        android:id="@+id/logButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:background="#8F7CFF"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutTitles"
        android:layout_width="408dp"
        android:layout_height="57dp"
        android:layout_marginTop="104dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="54dp"
            android:layout_height="55dp"
            android:layout_marginStart="24dp"
            android:contentDescription="@string/icon_login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_simple_square" />

        <TextView
            android:id="@+id/txtTitleLogin"
            android:layout_width="237dp"
            android:layout_height="52dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:text="@string/app_name"
            android:textSize="48sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutWelcome"
        android:layout_width="439dp"
        android:layout_height="69dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.774"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayoutTitles">

        <TextView
            android:id="@+id/txtTitleWelcome"
            android:layout_width="237dp"
            android:layout_height="67dp"
            android:text="@string/welcome"
            android:textSize="48sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.397"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="375dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.442"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayoutWelcome">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/userText"
                android:layout_width="189dp"
                android:layout_height="31dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="72dp"
                android:text="@string/username"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/userEmail"
                android:layout_width="322dp"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:autofillHints=""
                android:background="#9C9C9C9C"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                app:layout_constraintStart_toStartOf="@+id/userText"
                app:layout_constraintTop_toBottomOf="@+id/userText"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/passText"
                android:layout_width="189dp"
                android:layout_height="31dp"
                android:layout_marginTop="50dp"
                android:text="@string/password"
                app:layout_constraintStart_toStartOf="@+id/userEmail"
                app:layout_constraintTop_toBottomOf="@+id/userEmail" />

            <EditText
                android:id="@+id/userPass"
                android:layout_width="323dp"
                android:layout_height="49dp"
                android:layout_marginTop="16dp"
                android:autofillHints=""
                android:background="#9C9C9C9C"
                android:ems="10"
                android:inputType="textPassword"
                android:minHeight="48dp"
                app:layout_constraintStart_toStartOf="@+id/passText"
                app:layout_constraintTop_toBottomOf="@+id/passText"
                tools:ignore="SpeakableTextPresentCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>