<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"


    android:id="@+id/LinearLayoutMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="0dp"
    android:orientation="vertical"
    tools:visibility="visible">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <ImageView
            android:id="@+id/appIcon"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="20dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_simple_square" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/manropemedium"
            android:text="@string/app_name"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/appIcon"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/LinearLayoutHomescreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/userInfoLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtTitleLogin"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:fontFamily="@font/manropesemibold"
                android:text="@string/greeting"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="48sp" />

            <TextView
                android:id="@+id/txtDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/manroperegular"
                android:text="lorem ipsum etc etc"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayoutProducts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayoutTitles"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

                <TextView
                    android:id="@+id/txtProducts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/products"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btnViewMoreProducts"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:elevation="0dp"
                    android:fontFamily="@font/manropemedium"
                    android:onClick="openProducts"
                    android:shadowColor="#00FFFFFF"
                    android:text="@string/viewmore"
                    android:textAllCaps="false"
                    android:theme="@style/Button.WithTheme"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="DuplicateSpeakableTextCheck" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvProductsH"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayoutProviders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

                <Button
                    android:id="@+id/btnViewMoreProviders"
                    android:theme="@style/Button.WithTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:elevation="0dp"
                    android:fontFamily="@font/manropemedium"
                    android:onClick="openProviders"
                    android:shadowColor="#00FFFFFF"
                    android:text="@string/viewmore"
                    android:textAllCaps="false"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txtSuppliers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/manropemedium"
                    android:text="@string/suppliers"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvSuppliersH"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayoutProductsView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/txtTitleProducts"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:fontFamily="@font/manropesemibold"
            android:paddingBottom="5dp"
            android:text="@string/products"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="48sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvProducts"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayoutProvidersView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/txtTitleProviders"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:fontFamily="@font/manropesemibold"
            android:paddingBottom="5dp"
            android:text="@string/suppliers"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="48sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvProviders"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayoutNav"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btnHome"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/home"
            android:onClick="openHome"
            app:srcCompat="@drawable/ic_round_home_24" />

        <ImageButton
            android:id="@+id/btnProducts"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/products"
            android:onClick="openProducts"
            app:srcCompat="@drawable/ic_outline_shopping_cart_24"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <ImageButton
            android:id="@+id/btnProviders"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/suppliers"
            android:onClick="openProviders"
            app:srcCompat="@drawable/ic_outline_storefront_24"
            tools:ignore="DuplicateSpeakableTextCheck" />

    </LinearLayout>

</LinearLayout>